fix text spacing

--- a/stem-explorer-ng/src/app/shared/components/form-field/form-field.component.scss
+++ b/stem-explorer-ng/src/app/shared/components/form-field/form-field.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   display: block;
-  padding: 0;
+  padding-bottom: 0.5rem;
 }
 
 :host > div {
